Hero on mobile CSS fix

--- a/less/uams.hero.less
+++ b/less/uams.hero.less
@@ -158,7 +158,7 @@
 		    }
 
 		    #hero-bg {
-				top: 20px;
+				//top: 20px;
 			    #hero-container h1.uams-site-title ,
 			    div.container h1.uams-site-title2 {
 					padding-top: 40px;
